# computer-use-harness

./: .env.example  .gitignore  AGENTS.md  NOTICE.md  README.md  pyproject.toml
configs/providers/: openai.yaml  qwen-fireworks.yaml  qwen-openrouter.yaml  qwen.yaml
configs/targets/: host.yaml  mock.yaml  windows_vm.yaml
configs/task_suites/: smoke.yaml
docs/: architecture.md  provider-mapping.md  references.md  replay-format.md
examples/: gpt54_screenshot.py  qwen35_screenshot.py
src/cuh/: __init__.py
src/cuh/api/: __init__.py
src/cuh/backends/: __init__.py  base.py  cua_backend.py
src/cuh/bench/: __init__.py  reports.py  runner.py  tasks.py
src/cuh/cli/: __init__.py  main.py
src/cuh/config/: __init__.py  loader.py
src/cuh/core/: __init__.py  actions.py  events.py  models.py  observations.py  policy.py
src/cuh/openhands/: __init__.py
src/cuh/providers/: __init__.py  base.py  mapping.py  openai_gpt54.py  qwen35.py
src/cuh/replay/: __init__.py
src/cuh/runtime/: __init__.py  artifact_store.py  event_bus.py  orchestrator.py  session.py
tests/: __init__.py
tests/unit/: test_actions.py  test_bench.py  test_mapping.py  test_models.py  test_policy.py  test_qwen35.py
